--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -2,8 +2,6 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
 {% load my_tags %}
-
-{% for object in object_list %}
 <div class="col-3">
     <div class="card mb-4 box-shadow">
         <div class="card text-bg-primary mb-0" style="max-width: 20rem;">
@@ -16,11 +14,11 @@
                     <li>Цена {{object.price}}</li>
                     <img class="card-img-top" src="{{ object.image| my_media_filter }}">
                 </ul>
-                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                <a href="{% url 'catalog:home' %}" type="button"
+                   class="btn btn-danger">Назад</a>
             </div>
         </div>
     </div>
 </div>
-{% endfor %}
 {% endblock %}
 
