--- a/blog/templates/blog/article_form.html
+++ b/blog/templates/blog/article_form.html
@@ -7,10 +7,10 @@
     <div class="card mb-4 box-shadow">
         <div class="card text-bg-primary mb-0" style="max-width: 20rem;">
             <div class="card-header">
-                <h4 class="my-0 font-weight-normal">{{object.title}}</h4>
+                <h4 class="my-4 font-weight-normal">{{object.title}}</h4>
             </div>
             <div class="card-body">
-                <form method="post">
+                <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <button type="submit" class="btn btn-success">
