# Homework 22.2 step 3 is done

--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -4,5 +4,17 @@
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'blog:list' %}">Блог</a>
+        {% if user.is_authenticated %}
+        <a class="p-2" type="submit">
+            <form method="post" action="{% url 'users:logout' %}">
+                {% csrf_token %}
+                <button class="btn btn-outline-primary" type="submit">Выход</button>
+            </form>
+        </a>
+        {% else %}
+        <a href="{% url 'users:login' %}" class="p-2 text-dark">Вход</a>
+        <a href="{% url 'users:register' %}" class="p-2 text-dark">Регистрация</a>
+        {% endif %}
+
     </nav>
 </div>
